--- a/css/freelancer.css
+++ b/css/freelancer.css
@@ -76,7 +76,7 @@ hr.star-primary:after {
 header {
     text-align: center;
     color: #fff;
-    background: #A17F28;
+    background: #2c3e50;
 }
 
 header .container {
@@ -184,7 +184,7 @@ section h2 {
 
 #portfolio {
     color: #fff;
-    background: #A17F28;
+    background: #2c3e50;
 }
 
 #portfolio .portfolio-item {
